support oracle now.

--- a/src/test/resources/Jinter.properties
+++ b/src/test/resources/Jinter.properties
@@ -8,4 +8,4 @@ driverClass=com.mysql.jdbc.Driver
 #jdbcUrl = jdbc:oracle:thin:@10.60.17.241:1521:dg1
 #user = oyjr_ic_uat
 #password =oyjr_ic_uat
-#driverClass=oracle.jdbc.driver.OracleDriver
+#driverClass=oracle.jdbc.OracleDriver
