--- a/pom.xml
+++ b/pom.xml
@@ -39,18 +39,15 @@
 			<artifactId>fastjson</artifactId>
 			<version>1.2.7</version>
 		</dependency>
-
+		
+		<dependency>
+			<groupId>com.oracle</groupId>
+			<artifactId>ojdbc14</artifactId>
+			<version>10.2.0.4.0</version>
+		</dependency>
 	</dependencies>
-
-	<build>
-		<finalName>Jinter</finalName>
-		<resources>
-			<resource>
-				<directory>src/main/resources</directory>
-				<excludes>
-					<exclude>Jinter.properties</exclude>
-				</excludes>
-			</resource>
-		</resources>
-	</build>
+	
+	<!-- <build> <finalName>Jinter</finalName> <resources> <resource> <directory>src/main/resources</directory> 
+		<excludes> <exclude>Jinter.properties</exclude> </excludes> </resource> </resources> 
+		</build> -->
 </project>
